회원가입 항목별 타입 지정(email, number 등)

--- a/src/main/resources/css/Signup.css
+++ b/src/main/resources/css/Signup.css
@@ -42,6 +42,13 @@
     align-items: center;
 }
 
+.co2 {
+    flex: 1;
+    padding: 10px;
+    display: flex;
+    align-items: normal;
+}
+
 h5 {
     margin: 0;
     font-size: 1.5rem;
