--- a/src/main/resources/templates/SignupHospital.html
+++ b/src/main/resources/templates/SignupHospital.html
@@ -29,7 +29,7 @@
                 <div class="col">
                     <div class="input-group">
                         <div class="size">
-                            <input type="text" class="form-control" name="title" placeholder="이메일 입력">
+                            <input type="email" class="form-control" name="title" placeholder="이메일 입력">
                             &emsp;
                         </div>
                         <div class="input-group-append">
@@ -44,7 +44,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;대표 연락처</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="연락처 입력">
+                    <input type="number" class="form-control" name="title" placeholder="연락처 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                     <h5>병원 정보&ensp;&emsp;&emsp;|&emsp;&emsp;&nbsp;사업자번호</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="사업자번호 입력(하이픈(-) 제외)">
+                    <input type="number" class="form-control" name="title" placeholder="사업자번호 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
@@ -122,7 +122,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원 전화번호</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="병원 전화번호 입력">
+                    <input type="number" class="form-control" name="title" placeholder="병원 전화번호 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
