--- a/src/main/resources/templates/SignupUser.html
+++ b/src/main/resources/templates/SignupUser.html
@@ -31,7 +31,7 @@
                 <div class="col">
                     <div class="input-group">
                         <div class="size">
-                            <input type="text" class="form-control" name="title" placeholder="이메일 입력">
+                            <input type="email" class="form-control" name="title" placeholder="이메일 입력">
                             &emsp;
                         </div>
                         <div class="input-group-append">
@@ -46,7 +46,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;연락처</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="연락처 입력">
+                    <input type="number" class="form-control" name="title" placeholder="연락처 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;생년월일</h5>
                 </div>
                 <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="생년월일 입력(ex. 20020625)">
+                    <input type="number" class="form-control" name="title" placeholder="생년월일 입력(ex.20020625)">
                 </div>
             </div>
 
