--- a/src/main/resources/css/HPTReception.css
+++ b/src/main/resources/css/HPTReception.css
@@ -12,8 +12,7 @@ body {
 			padding: 20px;
 		}
 		h1 {
-			font-size: 24px;
-			font-weight: bold;
++			font-weight: bold;
 			margin-bottom: 20px;
 		}
 		table {
@@ -25,7 +24,7 @@ body {
 		th, td {
 			padding: 10px;
 			border: 1px solid #ddd;
-			text-align: left;
+			text-align: center;
 		}
 		th {
 			background-color: #f5f5f5;
