페이지 이동 옵션 추가

--- a/src/main/resources/templates/ChooseType.html
+++ b/src/main/resources/templates/ChooseType.html
@@ -12,9 +12,9 @@
   <div class="container">
     <h1>회원가입</h1>
     <div class="center">
-      <div class="button-container">
-        <button class="user-button">
-          <img src="user-image.jpg" alt="User">
+      <div class ="button-container">
+        <button onclick="location.href='SignupUser.html'" class="user-button">
+          <img src="user-image.jpg" alt="user">
           <span>User</span>
         </button>
         <div class="description">
@@ -22,8 +22,8 @@
         </div>
       </div>
       <div class="button-container">
-        <button class="hospital-button">
-          <img src="hospital-image.jpg" alt="Hospital">
+        <button onclick="location.href='SignupHospital.html'" class="hospital-button">
+          <img src="hospital-image.jpg" alt="hospital">
           <span>Hospital</span>
         </button>
         <div class="description">
