--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -23,7 +23,7 @@
         <button type="submit" class="btn">Login</button>
     </form>
     <div class="bottom-container">
-        <a href="#" class="btn">Signup</a>
+        <a href="/templates/ChooseType.html" class="btn">Signup</a>
         <a href="#" class="btn">Find ID/PW</a>
     </div>
 </div>
