--- a/src/main/resources/templates/SignupHospital.html
+++ b/src/main/resources/templates/SignupHospital.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <form>
+        <form action="/member/signupHospital" method="post">
             <h2 class="head">병원 회원가입</h2>
             <hr>
             <div class="row">
@@ -18,10 +18,11 @@
                     <h5>로그인 정보&emsp;&emsp;|&emsp;&emsp;대표 이름</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="이름 입력">
+                    <input type="text" class="form-control" name="repName" placeholder="이름 입력">
                 </div>
             </div>
 
+            <form action="/member/validation/email">
             <div class="row">
                 <div class="col">
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;대표 이메일</h5>
@@ -29,7 +30,7 @@
                 <div class="col">
                     <div class="input-group">
                         <div class="size">
-                            <input type="email" class="form-control" name="title" placeholder="이메일 입력">
+                            <input type="email" class="form-control" name="repEmail" placeholder="이메일 입력">
                             &emsp;
                         </div>
                         <div class="input-group-append">
@@ -38,13 +39,14 @@
                     </div>
                 </div>
             </div>
+            </form>
 
             <div class="row">
                 <div class="col">
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;대표 연락처</h5>
                 </div>
                 <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="연락처 입력(하이픈(-) 제외)">
+                    <input type="number" class="form-control" name="repPhoneNum" placeholder="연락처 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
@@ -53,7 +55,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="비밀번호 입력">
+                    <input type="text" class="form-control" name="repPassword" placeholder="비밀번호 입력">
                 </div>
             </div>
 
@@ -62,7 +64,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 확인</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="비밀번호 다시 입력">
+                    <input type="text" class="form-control" name="confirmPassword" placeholder="비밀번호 다시 입력">
                 </div>
             </div>
 
@@ -71,7 +73,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 질문</h5>
                 </div>
                 <div class="col">
-                    <select class="form-control" name="title">
+                    <select class="form-control" name="repQuestion">
                         <option value="" disabled selected>여기를 클릭하세요.</option>
                         <option value="1">질문1</option>
                         <option value="2">질문2</option>
@@ -85,7 +87,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;질문 답</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="질문 답 입력">
+                    <input type="text" class="form-control" name="repAnswer" placeholder="질문 답 입력">
                 </div>
             </div>
 
@@ -94,7 +96,7 @@
                     <h5>병원 정보&ensp;&emsp;&emsp;|&emsp;&emsp;&nbsp;사업자번호</h5>
                 </div>
                 <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="사업자번호 입력(하이픈(-) 제외)">
+                    <input type="number" class="form-control" name="businessNum" placeholder="사업자번호 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
@@ -104,7 +106,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원명</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="병원명 입력 (사업자등록증과 동일하게 작성)">
+                    <input type="text" class="form-control" name="hptName" placeholder="병원명 입력 (사업자등록증과 동일하게 작성)">
                 </div>
             </div>
 
@@ -113,7 +115,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원 주소</h5>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="병원 주소 입력 (사업자등록증과 동일하게 작성)">
+                    <input type="text" class="form-control" name="hptAddress" placeholder="병원 주소 입력 (사업자등록증과 동일하게 작성)">
                 </div>
             </div>
 
@@ -122,7 +124,7 @@
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원 전화번호</h5>
                 </div>
                 <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="병원 전화번호 입력(하이픈(-) 제외)">
+                    <input type="number" class="form-control" name="hptPhoneNum" placeholder="병원 전화번호 입력(하이픈(-) 제외)">
                 </div>
             </div>
 
