--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -5,16 +5,16 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/community/post.css">
-    <link rel="stylesheet" href="../../css/community/postcommon.css">
+    <link rel="stylesheet" th:href="@{/css/community/post.css}" href="../../css/community/post.css">
+    <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
 </head>
 <body>
 <div class="container">
     <div class="post">
         <h2 class="post-title">[새롬소아청소년과의원] 여기 추천합니다! </h2>
-        <p class="post-author">lee***   &nbsp;&nbsp;&nbsp;&nbsp;
-        <span class="post-hits">조회수 | 238</span>
-        <span class="post-registerDate">23.4.4 화</span>
+        <p class="post-author">lee*** &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="post-hits">조회수 | 238</span>
+            <span class="post-registerDate">23.4.4 화</span>
         </p>
         <hr>
         <div class="post-content">
@@ -25,7 +25,9 @@
             <button type="submit" class="btn btn-secondary btn-sm">신고</button>
         </div>
         <div class="rbuttons">
-            <button type="submit" class="btn btn-secondary btn-sm">수정</button>
+            <button type="submit" class="btn btn-secondary btn-sm"
+                    onclick="location.href='editPost.html'"
+                    th:onclick="|location.href='@{/community/edit}'|">수정</button>
             <button type="button" class="btn btn-secondary btn-sm" onclick="">삭제</button>
         </div>
         <br><br><br><br>
@@ -60,12 +62,15 @@
         <hr>
         <form class="comment-form">
             <label for="comment" class="comment-writer">har*** : &nbsp;</label>
-            <textarea id="comment" name="comment" class="comment-input" rows="2" cols="60%" required placeholder="댓글을 입력해보세요."></textarea>  &nbsp;&nbsp;
+            <textarea id="comment" name="comment" class="comment-input" rows="2" cols="60%" required
+                      placeholder="댓글을 입력해보세요."></textarea> &nbsp;&nbsp;
             <button type="submit" class="btn btn-secondary btn-sm">등록</button>
         </form>
         <hr>
         <form>
-            <button type="button" class="btn btn-secondary btn-sm">목록으로 돌아가기</button>
+            <button type="button" class="btn btn-secondary btn-sm"
+                    onclick="location.href='posts.html'"
+                    th:onclick="|location.href='@{/community/posts}'|">목록으로 돌아가기</button>
         </form>
     </div>
 </div>
