--- a/src/main/resources/templates/community/writePost.html
+++ b/src/main/resources/templates/community/writePost.html
@@ -5,17 +5,19 @@
     <title>후기 작성</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/community/writePost.css">
-    <link rel="stylesheet" type="text/css" href="/css/community/common.css">
+    <link rel="stylesheet" th:href="@{/css/community/writePost.css}" href="../../css/community/writePost.css">
+    <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
 </head>
 <body>
 
 <div class="container">
-    <form>
+    <form action="post.html" th:action method="post">
         <h4 class="head">후기 작성</h4>
         <div class="buttons">
             <button type="submit" class="btn btn-secondary btn-md">등록</button>
-            <button type="button" class="btn btn-secondary btn-md" onclick="">취소</button>
+            <button type="button" class="btn btn-secondary btn-md"
+                    onclick="location.href='posts.html'"
+                    th:onclick="|location.href='@{/community/posts}'|">취소</button>
         </div>
         <hr>
         <div class="mb-3">
