--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="/css/reservationStyle.css">
+    <script type="text/javascript" src="/script/userReservation.js" defer></script>
 </head>
 <body>
 <div class="container">
@@ -24,9 +25,13 @@
                         <td th:text="${reservationInfo.resNo}"></td>
                         <td th:text="${reservationInfo.hptName}"></td>
                         <td th:text="${reservationInfo.txList}"></td>
-                        <td th:text="${reservationInfo.rDate}"></td>
+                        <td th:text="${#temporals.format(reservationInfo.rDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td th:text="${reservationInfo.status}"></td>
-                        <td></td>
+                        <td>
+                            <a th:if="${reservationInfo.status == '진료 전'}" th:href="@{/userReservation}" onclick="cancelReservation()">취소 하기</a>
+                            <a th:if="${reservationInfo.status == '진료 완료'}" th:href="@{/community/writePost}">후기 작성</a>
+                        </td>
+
             </tr>
             </tbody>
         </table>
