--- a/src/main/resources/static/css/community/posts.css
+++ b/src/main/resources/static/css/community/posts.css
@@ -28,3 +28,11 @@ form {
     color: darkblue;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
