--- a/src/main/resources/templates/community/editPost.html
+++ b/src/main/resources/templates/community/editPost.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>후기 작성</title>
+    <title>후기 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/editPost.css}" href="../../css/community/editPost.css">
@@ -12,20 +12,24 @@
 
 <div class="container">
     <form action="post.html" th:action method="post">
-        <h4 class="head">후기 작성</h4>
+        <input type="hidden" name="page" th:value="${pageRequestDTO.page}">
+        <input type="hidden" name="type" th:value="${pageRequestDTO.type}">
+        <input type="hidden" name="keyword" th:value="${pageRequestDTO.keyword}">
+
+        <h4 class="head">후기 수정</h4>
         <div class="buttons">
             <button type="submit" class="btn btn-secondary btn-md">수정</button>
             <button type="button" class="btn btn-secondary btn-md"
                     onclick="location.href='posts.html'"
-                    th:onclick="|location.href='@{/community/posts}'|">취소</button>
+                    th:onclick="|location.href='@{/community(page=${pageRequestDTO.page},type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}'|">취소</button>
         </div>
         <hr>
         <div class="mb-3">
-            <input type="text" class="form-control" name="title" value="[새롬소아청소년과의원(자동입력)] 여기 추천합니다!">
+            <input type="text" class="form-control" name="hptName" th:value="|[${dto.hptName}]|" value="[병원명]" readonly>
+            <input type="text" class="form-control" name="title" th:value="${dto.title}" value="제목">
         </div>
         <div class="mb-3">
-            <textarea class="form-control" name="content" rows="15">새롬소아청소년과의원 추천합니다!
-ㅈㄱㄴ</textarea>
+            <textarea class="form-control" name="content" rows="15" th:text="${dto.content}">내용</textarea>
         </div>
     </form>
 </div>
