--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${dto.title}">후기 상세</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/post.css}" href="../../css/community/post.css">
@@ -10,28 +10,41 @@
 </head>
 <body>
 <div class="container">
+
     <div class="post">
-        <h2 class="post-title">[새롬소아청소년과의원] 여기 추천합니다! </h2>
-        <p class="post-author">lee*** &nbsp;&nbsp;&nbsp;&nbsp;
-            <span class="post-hits">조회수 | 238</span>
-            <span class="post-registerDate">23.4.4 화</span>
-        </p>
+        <h2 class="post-title" th:text="|[${dto.hptName}] ${dto.title}|">[병원명] 제목</h2>
+        <p class="post-author" th:text="${dto.userEmail}">작성자 이메일 &nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <span class="post-hits" th:text="|조회수 ${dto.hit}|">조회수 238</span>
+        <span class="post-registerDate" th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm')}">23.4.4 화</span>
         <hr>
         <div class="post-content">
-            <p>맛집이네요</p>
+            <p th:text="${dto.content}">내용</p>
         </div>
         <hr>
-        <div class="lbuttons">
-            <button type="submit" class="btn btn-secondary btn-sm">신고</button>
-        </div>
-        <div class="rbuttons">
-            <button type="submit" class="btn btn-secondary btn-sm"
-                    onclick="location.href='editPost.html'"
-                    th:onclick="|location.href='@{/community/edit}'|">수정</button>
-            <button type="button" class="btn btn-secondary btn-sm" onclick="">삭제</button>
-        </div>
+
+        <form th:action="@{/community/report}" method="post">
+            <input type="hidden" name="postNo" th:value="${dto.postNo}">
+
+            <div class="lbuttons">
+                <button type="submit" class="btn btn-secondary btn-sm" th:text="|신고 (${dto.report})|">신고</button>
+            </div>
+        </form>
+        <form th:action="@{/community/delete}" method="post">
+            <div class="rbuttons">
+                <button type="button" class="btn btn-secondary btn-sm"
+                        onclick="location.href='editPost.html'"
+                        th:onclick="|location.href='@{/community/{postNo}/edit(postNo=${dto.postNo},page=${pageRequestDTO.page},type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}'|">
+                    수정
+                </button>
+
+                <input type="hidden" name="postNo" th:value="${dto.postNo}">
+                <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
+            </div>
+        </form>
         <br><br><br><br>
-        <h4 class="comment-title">댓글<span class="comment-count">(7)</span></h4>
+
+        <!-- 댓글 -->
+        <h4 class="comment-title">댓글<span class="comment-count" th:text="|(${dto.commentCount})|">(7)</span></h4>
         <hr>
         <table class="table table-borderless">
             <tbody class="comments-table">
@@ -67,11 +80,12 @@
             <button type="submit" class="btn btn-secondary btn-sm">등록</button>
         </form>
         <hr>
-        <form>
-            <button type="button" class="btn btn-secondary btn-sm"
-                    onclick="location.href='posts.html'"
-                    th:onclick="|location.href='@{/community/posts}'|">목록으로 돌아가기</button>
-        </form>
+
+        <button type="button" class="btn btn-secondary btn-sm"
+                onclick="location.href='posts.html'"
+                th:onclick="|location.href='@{/community(page=${pageRequestDTO.page},type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}'|">
+            목록으로 돌아가기
+        </button>
     </div>
 </div>
 </body>
