--- a/src/main/resources/templates/community/posts.html
+++ b/src/main/resources/templates/community/posts.html
@@ -67,8 +67,9 @@
 
     <!-- 검색 -->
     <form>
-        <select class="form-select" aria-label="Default select example">
-            <option th:selected="${pageRequestDTO.type == null}"d>전체</option>
+        <input type="hidden" name="page" value="1">
+        <select class="form-select" aria-label="Default select example" name="type">
+            <option value="" th:selected="${pageRequestDTO.type == null}">------</option>
             <option value="h" th:selected="${pageRequestDTO.type == 'h'}">병원명</option>
             <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
             <option value="u" th:selected="${pageRequestDTO.type == 'u'}">작성자</option>
