--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -5,17 +5,20 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/community/post.css">
-    <link rel="stylesheet" href="../../css/community/postcommon.css">
+    <link rel="stylesheet" th:href="@{/css/community/post.css}" href="../../css/community/post.css">
+    <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
+    <script type="text/javascript" src="/static/js/comment.js"></script>
 </head>
 <body>
 <div class="container">
     <div class="post">
-        <h2 class="post-title">[새롬소아청소년과의원] 여기 추천합니다! </h2>
-        <p class="post-author">lee***   &nbsp;&nbsp;&nbsp;&nbsp;
-        <span class="post-hits">조회수 | 238</span>
-        <span class="post-registerDate">23.4.4 화</span>
+        <div class="post-title">
+            <h2>[새롬소아청소년과의원] 여기 추천합니다! </h2>
+            <p class="post-author">lee*** &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="post-hits">조회수 | 238</span>
+            <span class="post-registerDate">23.4.4 화</span>
         </p>
+        </div>
         <hr>
         <div class="post-content">
             <p>맛집이네요</p>
@@ -25,48 +28,63 @@
             <button type="submit" class="btn btn-secondary btn-sm">신고</button>
         </div>
         <div class="rbuttons">
-            <button type="submit" class="btn btn-secondary btn-sm">수정</button>
+            <button type="submit" class="btn btn-secondary btn-sm"
+                    onclick="location.href='editPost.html'"
+                    th:onclick="|location.href='@{/community/edit}'|">수정</button>
             <button type="button" class="btn btn-secondary btn-sm" onclick="">삭제</button>
         </div>
-        <br><br><br><br>
-        <h4 class="comment-title">댓글<span class="comment-count">(7)</span></h4>
-        <hr>
-        <table class="table table-borderless">
-            <tbody class="comments-table">
-            <tr>
-                <td rowspan="2">long***</td>
-                <td>good입니다.</td>
-            </tr>
-            <tr class="border-bottom">
-                <td>
-                    <button type="submit" class="btn btn-secondary btn-sm">수정</button>
-                    <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
-                </td>
-                <td>2023-04-20</td>
-            </tr>
-            <tr>
-                <td rowspan="2">harang***</td>
-                <td>동감합니다.</td>
-            </tr>
-            <tr>
-                <td>
-                    <button type="submit" class="btn btn-secondary btn-sm">수정</button>
-                    <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
-                </td>
-                <td>2023-04-24</td>
-            </tr>
-            </tbody>
-        </table>
-        <hr>
-        <form class="comment-form">
-            <label for="comment" class="comment-writer">har*** : &nbsp;</label>
-            <textarea id="comment" name="comment" class="comment-input" rows="2" cols="60%" required placeholder="댓글을 입력해보세요."></textarea>  &nbsp;&nbsp;
-            <button type="submit" class="btn btn-secondary btn-sm">등록</button>
-        </form>
-        <hr>
-        <form>
-            <button type="button" class="btn btn-secondary btn-sm">목록으로 돌아가기</button>
-        </form>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="comment">
+            <h4 class="comment-title">댓글<span class="comment-count">(7)</span></h4>
+            <hr>
+            <div class="comment-list">
+                <table class="table table-borderless">
+                    <tbody class="comments-table">
+                    <tr>
+                        <td rowspan="2">long***</td>
+                        <td>good입니다.</td>
+                    </tr>
+                    <tr class="border-bottom">
+                        <td>
+                            <button type="submit" class="btn btn-secondary btn-sm">수정</button>
+                            <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
+                        </td>
+                        <td>2023-04-20</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">harang***</td>
+                        <td>동감합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="submit" class="btn btn-secondary btn-sm">수정</button>
+                            <button type="submit" class="btn btn-secondary btn-sm">삭제</button>
+                        </td>
+                        <td>2023-04-24</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <hr>
+            <div class="comment-form">
+                <form>
+                    <label for="comment-content">har*** : &nbsp;</label>
+                    <textarea id="comment-content" name="comment-content" class="comment-content" rows="2" cols="60%" required
+                              placeholder="댓글을 입력해보세요."></textarea> &nbsp;&nbsp;
+                    <button type="button" id="btn-comment-create" class="btn btn-secondary btn-sm" >등록</button>
+                    <input type="hidden" id="postNo" value="{postNo}" />
+                </form>
+            </div>
+            <hr>
+            <form>
+                <button type="button" class="btn btn-secondary btn-sm"
+                        onclick="location.href='posts.html'"
+                        th:onclick="|location.href='@{/community/posts}'|">목록으로</button>
+            </form>
+        </div>
     </div>
 </div>
 </body>
