--- a/src/main/resources/templates/community/posts.html
+++ b/src/main/resources/templates/community/posts.html
@@ -4,56 +4,42 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/community/posts.css">
-    <link rel="stylesheet" type="text/css" href="/css/community/common.css">
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/community/posts.css}" href="../../css/community/posts.css">
+    <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
 </head>
 <body>
 <div class="container">
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th>No</th>
-                <th>병원명</th>
-                <th>제목</th>
-                <th>작성자</th>
-                <th>등록일</th>
-                <th>조회수</th>
-            </tr>
+        <tr>
+            <th>No</th>
+            <th>병원명</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>등록일</th>
+            <th>조회수</th>
+        </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>4</td>
-                <td>김진우소아청소년과의원</td>
-                <td>여기 별로인듯..?[3]</td>
-                <td>har***</td>
-                <td>2023.04.25</td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>새롬소아청소년과의원</td>
-                <td>여기 별로에요[2]</td>
-                <td>har***</td>
-                <td>2023.04.23</td>
-                <td>22</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>새롬소아청소년과의원</td>
-                <td>여기 추천합니다![7]</td>
-                <td>har***</td>
-                <td>2023.04.20</td>
-                <td>234</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>새롬소아청소년과의원</td>
-                <td>의사가 친절해요!</td>
-                <td>long***</td>
-                <td>2023.04.04</td>
-                <td>567</td>
-            </tr>
+        <tr>
+            <td>2</td>
+            <td>새롬소아청소년과의원</td>
+            <td><a href="post.html" th:href="@{/community/post}">
+                여기 추천합니다![7]
+            </a></td>
+            <td>har***</td>
+            <td>2023.04.20</td>
+            <td>234</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>새롬소아청소년과의원</td>
+            <td>의사가 친절해요!</td>
+            <td>long***</td>
+            <td>2023.04.04</td>
+            <td>567</td>
+        </tr>
         </tbody>
     </table>
     <nav aria-label="Page navigation example">
