--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -21,14 +21,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="reservationInfo : ${userReservationList}">
+            <tr th:each="reservationInfo : ${session.userReservationList}">
                         <td th:text="${reservationInfo.resNo}"></td>
                         <td th:text="${reservationInfo.hptName}"></td>
                         <td th:text="${reservationInfo.txList}"></td>
                         <td th:text="${#temporals.format(reservationInfo.rDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td th:text="${reservationInfo.currentStatus}"></td>
                         <td>
-                            <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userReservationUpdate}" onclick="cancelReservation()">취소 하기</a>
+                            <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userResCancelUpdate}" onclick="cancelReservation()">취소 하기</a>
                             <a th:if="${reservationInfo.currentStatus == '진료 완료'}" th:href="@{/community/writePost}">후기 작성</a>
                         </td>
 
