--- a/src/main/resources/templates/HptReception/HptReception.html
+++ b/src/main/resources/templates/HptReception/HptReception.html
@@ -37,7 +37,10 @@
             <td th:text="${hptReception.rDate}"></td>
             <td th:text="${hptReception.currentStatus}"></td>
             <td>
-                <a th:if="${hptReception.currentStatus == '접수대기'}" th:href="@{/HptReception/updateCurrentStatus(resNo=${hptReception.resNo})}" >접수</a>
+                <a th:if="${hptReception.currentStatus == '접수대기'}"
+                   th:href="@{/HptReception/updateCurrentStatus(resNo=${hptReception.resNo})}"
+                   th:method="post"
+                   onclick="acceptReception()">접수</a>
                 <a th:if="${hptReception.currentStatus == '접수대기'}" th:href="@{/HptReception/reject/{resNo}(resNo=${hptReception.resNo})}">거절</a>
                 <a th:if="${hptReception.currentStatus == '진료 전'}" th:href="@{/HptReception/complete/{resNo}(resNo=${hptReception.resNo})}" th:onclick="'javascript: {complete(${hptReception.resNo})}';">진료완료</a>
             </td>
