--- a/src/main/resources/templates/community/writePost.html
+++ b/src/main/resources/templates/community/writePost.html
@@ -14,7 +14,7 @@
     <form action="post.html" th:action method="post">
         <input type="hidden" name="resNo" value="3">
         <input type="hidden" name="hptName" value="이지소아청소년과의원">
-        <input type="hidden" name="userEmail" value="user100@naver.com">
+        <input type="hidden" name="userId" value="100">
 
         <h4 class="head">후기 작성</h4>
         <div class="buttons">
