--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -93,7 +93,7 @@
         </form>
         <div class="bottom-container">
             <a th:href="@{/type}" class="btn">Signup</a>
-            <a href="/#" class="btn">Find ID/PW</a>
+            <a href="/static#" class="btn">Find ID/PW</a>
         </div>
     </div>
 </body>
