MODIFY COMMUNITY POST

--- a/src/main/resources/templates/community/writePost.html
+++ b/src/main/resources/templates/community/writePost.html
@@ -19,8 +19,8 @@
         <div class="buttons">
             <button type="submit" class="btn btn-secondary btn-md">등록</button>
             <button type="button" class="btn btn-secondary btn-md"
-                    onclick="location.href='posts.html'"
-                    th:onclick="|location.href='@{/community}'|">취소</button>
+                    onclick="location.href='userReservation.html'"
+                    th:onclick="|location.href='@{/userReservation}'|">취소</button>
         </div>
         <hr>
         <div class="mb-3">
