--- a/src/main/resources/templates/maps/maps1.html
+++ b/src/main/resources/templates/maps/maps1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum=1.0, userEntity-scalable=no">
 	<title>카카오맵 API</title>
 </head>
 <body>
