--- a/src/main/resources/templates/maps/kakaoMaps.html
+++ b/src/main/resources/templates/maps/kakaoMaps.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum=1.0, userEntity-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum=1.0, user-scalable=no">
 	<title>카카오맵 API</title>
 
 	<th:block layout:fragment="css">
