kakaoMaps.html 수정

--- a/src/main/resources/templates/maps/kakaoMaps.html
+++ b/src/main/resources/templates/maps/kakaoMaps.html
@@ -244,6 +244,7 @@
 					document.getElementById('submitBtn').addEventListener('click', function() {
 						popup.remove();
 						alert('접수 완료!');
+						window.location.href = '/userReservation';
 					});
 					
 					// 취소 버튼 클릭 시 팝업창 닫기
