--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-    <title>Hello</title>
+    <title>접수내역 확인 페이지</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="/css/reservationStyle.css">
     <script type="text/javascript" src="/script/userReservation.js" defer></script>
@@ -32,7 +32,7 @@
                             <td th:text="${reservationInfo.currentStatus}"></td>
                             <td>
                                 <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userResCancelUpdate}" onclick="cancelReservation(); return false;">취소 하기</a>
-                                <a th:if="${reservationInfo.currentStatus == '진료 완료'}" th:href="@{/community/writePost}">후기 작성</a>
+                                <a th:if="${reservationInfo.currentStatus == '진료 완료'}" th:href="@{/community/write}">후기 작성</a>
                             </td>
 
                 </tr>
